--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
