--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,13 @@
     "$": false,
     "jQuery": false
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module"
   },
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "rules": {
     "indent": [
       "error",
