:wrench: Update: 厳格な型チェックの設定

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
+    "strict": true,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
